web/graph/css/global.css
/* ... */
#section {
  position: relative;
  padding: 0px 0 0 0px;
  height: auto !important;
  padding-top: 10px;
}

#section > style {
  display: none !important;
}

#section > *:not(#sidebar):not(style) {
  grid-column: 2;
}

.section-content > ul.action,
#section > ul.action {
  display: flex;
  flex-wrap: wrap;
  gap: 6px;
  margin: 0;
  padding: 0;
  position: absolute;
  top: -5px;
  right: 0;
  z-index: 10;
}

.section-content > ul.action li,
#section > ul.action li {
  list-style: none;
  float: none !important;
  margin: 0 !important;
  padding: 0;
}

.section-content > ul.action li:empty,
#section > ul.action li:empty {
  display: none;
}

#container {
  overflow-x: auto;
}

h1, h2, h3, h4, h5, h6 {
  color: var(--color-text-medium);
  font-weight: 500;
  padding: 0;
  margin: 0;
}

h1 {
  font-size: 18px;
  color: var(--color-text-dark);
}

h2 {
  font-size: var(--text-xl);
  color: var(--color-text-dark);
}

h3 {
  font-size: var(--text-md);
}

h4 {
  font-size: var(--text-base);
}

/* Section titles in forms (span.section-title or span.*-title) */
span.section-title,
span[class$="-title"] {
  font-size: 13px;
  font-weight: 600;
  color: #444050;
  padding: 8px 0 4px;
  display: block;
  border-bottom: 2px solid #444050;
  margin-bottom: 12px;
  margin-top: 8px;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}

/* Inside form table — pull left to cover label column */
.mmc-form-table span.section-title,
.mmc-form-table span[class$="-title"] {
  margin-left: -236px;
  width: calc(100% + 236px);
}

/* First section title in form — no extra top margin needed after page title */
form > table > tbody > tr:first-child span.section-title,
form > table > tbody > tr:first-child span[class$="-title"] {
  margin-top: 0;
  padding-top: 0;
}

/* Page title */
#section h2 {
  font-size: 20px;
  font-weight: 600;
  color: var(--color-text-dark);
  margin-bottom: 16px;
  width: fit-content;
}

p.listInfos {
  color: var(--color-text-light);
  font-size: 9px;
  height: 22px;
  line-height: 22px;
  margin: 0px 0 5px 0;
  padding: 0;
}

form .navList:nth-of-type(2) {
  margin-top: 20px;
}

ul.navList {
  padding: 0px 28px 0 0;
  position: absolute;
  margin: 0;

  right: 0;
}

ul.navList li {
  font-size: 9px;
  color: var(--color-text-light);
  display: inline;
  list-style-type: none;
}

li.previousList {
  margin-left: 20px;
}

li.previousList a {
  padding: 0 10px 0 12px;
  margin: 0;
  background-image: url("../../img/common/icn_previous.gif");
  background-repeat: no-repeat;
  border-right: solid 1px var(--color-border-medium);
}

li.previousList a:hover {
  background-image: url("../../img/common/icn_previous_ro.gif");
}

li.previousListInactive {
  padding: 0 10px 0 12px;
  margin: 0;
  background-image: url("../../img/common/icn_previous_inactive.gif");
  background-repeat: no-repeat;
  border-right: solid 1px var(--color-border-medium);
  margin-left: 20px;
}

li.nextList a {
  padding: 0 12px 0 9px;
  margin: 0;
  background-image: url("../../img/common/icn_next.gif");
  background-repeat: no-repeat;
  background-position: right top;
}

li.nextList a:hover {
  background-image: url("../../img/common/icn_next_ro.gif");
}

li.nextListInactive {
  padding: 0 12px 0 9px;
  margin: 0;
  background-image: url("../../img/common/icn_next_inactive.gif");
  background-repeat: no-repeat;
  background-position: right top;
}

ul.action {
  padding: 0px;
  margin: 0px;
  float: right;
  clear: both;
  line-height: 41px;
}

ul.action li {
  font-size: 11px;
  color: var(--color-text-light);
  display: inline;
  list-style-type: none;
  margin-left: 10px;
}

span.pagination {
  font-size: 9px;
  color: var(--color-text-light);
  margin-right: 2px;
}

span.pagination input,
span.pagination select {
  font-size: 9px;
  padding: 0px;
  min-width: auto;
  width: auto;
}

span.pagination input {
  padding: 2px;
}

/* ---------------------------------------- */
/* List info icons                         */
/* ---------------------------------------- */

ul.action li a:hover {
  color: #95aabf;
}

li.info a {
  padding: 3px 0px 5px 20px;
  margin: 0 0px 0 0px;
  background-image: url("../../img/common/info.png");
  background-repeat: no-repeat;
  background-position: left top;
  line-height: 18px;
  text-decoration: none;
  color: var(--color-text-white);
}

li.empty a {
  padding: 3px 0px 5px 20px;
  margin: 0 0px 0 0px;
  background: none;
  line-height: 18px;
  text-decoration: none;
  color: var(--color-text-white);
}

li.load a {
  padding: 3px 0px 5px 20px;
  margin: 0 0px 0 0px;
  background-image: url("../../img/common/loader_p.gif");
  background-repeat: no-repeat;
  background-position: left top;
  line-height: 18px;
  text-decoration: none;
  color: var(--color-text-white);
}

li.wait a {
  padding: 3px 0px 5px 20px;
  margin: 0 0px 0 0px;
  background-image: url("../../img/common/todo.png");
  background-repeat: no-repeat;
  background-position: left top;
  line-height: 18px;
  text-decoration: none;
  color: var(--color-text-white);
}

/* ---------------------------------------- */
/* Action icons                            */
/* ---------------------------------------- */

/* Base styles for all action icons */
ul.action li a,
.action li a {
  padding: 5px 0 5px 22px;
  margin: 0;
  background-repeat: no-repeat;
  background-position: left top;
  background-size: 25px 25px;
  line-height: 18px;
  text-decoration: none;
  color: var(--color-text-white);
}

/* Individual icon images */
li.fileviewer a, li.fileviewerg a { background-image: url("../../img/actions/fileviewer.svg"); }
li.inventory a, li.inventoryg a { background-image: url("../../img/actions/inventory.svg"); }
li.backuppc a { background-image: url("../../img/actions/backup.svg"); }
li.install a, li.installg a { background-image: url("../../img/actions/deploy.svg"); }
li.imaging a, li.imagingg a { background-image: url("../../img/actions/imaging.svg"); }
/* ... */

